gdaygame add page

--- a/styles/leaderboard.css
+++ b/styles/leaderboard.css
@@ -8,7 +8,7 @@
 
 /* 스크롤바의 배경 */
 .scroll-container::-webkit-scrollbar-track {
-  background: linear-gradient(to bottom, #F5C150, #DE85A1, #7E8FF4);
+  background: linear-gradient(to bottom, #FF68FE, #FF4E51, #FF7733);
   border-radius: 5px;
 }
 
